<resources>
    <string name="app_name">资费计算</string>
    <!--首页-->
    <string name="menu_express_output">客户取件</string>
    <string name="menu_express_input">快件录入</string>
    <string name="menu_zf_find">资费查询</string>
    <string name="menu_ds">代收包裹</string>
    <string name="no_content">此功能正在开发中...</string>
    <string name="menu_find_express">查包裹</string>
    <string name="home_title">中国邮政</string>
    <string name="mine_title">我</string>
    <string name="post_type">邮件种类</string>
    <string name="post_bag">快递包裹</string>
    <string name="standard_post">标准快递</string>
    <string name="send_address">原寄地</string>
    <string name="send_address_false_data">合肥市/蜀山区</string>
    <string name="accept_address">寄达地</string>
    <string name="accept_address_false_data">南京市/玄武区</string>
    <string name="send_address_tip">请选择原寄递省、市、县/区</string>
    <string name="accept_address_tip">请选择寄达地区</string>
    <string name="calculation">计算</string>
    <string name="insured_calculation">资费计算</string>
    <string name="insured_query">资费查询</string>
    <string name="insured_result">资费结果</string>
    <string name="insured_explain">资费说明</string>
    <string name="insured_explain_01">1) 计泡收费是对普通包裹（含10kg以内）单边最大长度超过50cm的包裹进行计泡，即对单边最大长度超过50cm的包裹，取邮件实际重量和体积重量的较大者作为计费重量，用以计收费字。                                      体积重量（kg）=长（cm）*宽（cm）/6000（cm3/kg）（长、宽、高分别按邮件外包装自然轮廓的最长、最宽、最高部位尺寸计算）        </string>
    <string name="insured_explain_02">2)以上资费仅供您参考，最终以营业部门收寄时为准。</string>
    <string name="jp_message">计泡信息</string>
    <string name="real_weight">实际重量</string>
    <string name="len">长(cm)</string>
    <string name="width">宽(cm)</string>
    <string name="height">高(cm)</string>
    <string name="billing_weight_tip">单边长度超过50cm应计泡</string>
    <string name="insured_value_tip">选填，0-2000元，可输入小数</string>
</resources>
