<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <include layout="@layout/view_header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGray">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/colorGray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="46dp"
                android:layout_marginLeft="15dp"
                android:textSize="18dp"
                android:textColor="@color/theme"
                android:gravity="center_vertical"
                android:text="@string/insured_calculation" />

            <include layout="@layout/view_line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/send_address" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/accept_address" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/colorBlack"
                    android:textSize="18dp"
                    android:text="@string/send_address_false_data" />

                <ImageView
                    android:id="@+id/iv_car"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/post_car" />

                <ImageView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_below="@+id/iv_car"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/post_line" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/colorBlack"
                    android:textSize="18dp"
                    android:text="@string/accept_address_false_data" />

            </RelativeLayout>

            <include
                layout="@layout/view_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="46dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/colorBlack"
                    android:text="@string/send_address" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/colorBlack"
                    android:text="@string/accept_address" />

            </RelativeLayout>

            <include
                layout="@layout/view_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="66dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/colorBlack"
                    android:text="计费重量（kg）" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/theme"
                    android:text="20" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/colorBlack"
                    android:text="寄递资费（元）"
                    android:layout_alignParentTop="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/orange"
                    android:text="￥44.00" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/colorBlack"
                    android:text="保价费（元）" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/orange"
                    android:text="￥0" />

            </RelativeLayout>

            <include
                layout="@layout/view_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="56dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toLeftOf="@+id/tv_insured_sum"
                    android:layout_marginRight="20dp"
                    android:gravity="center_vertical"
                    android:textSize="16dp"
                    android:textColor="@color/colorBlack"
                    android:text="预计运费（元）" />

                <TextView
                    android:id="@+id/tv_insured_sum"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/orange"
                    android:text="￥44.00" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorGray"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/insured_explain" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/insured_explain_01" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/insured_explain_02" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>